# quark

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  result  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/skills/run-app/: SKILL.md
.claude/skills/version-bump/: SKILL.md  bump.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/updates/beta/: latest.json
fdroid/: .gitignore  config.yml
fdroid/metadata/: tel.quark.app.yml
flatpak/: quark-launch.sh  tel.quark.app.desktop  tel.quark.app.metainfo.xml  tel.quark.app.yml
nix/: package.nix
scripts/: gen-emoji.mjs  gen-ios-icons.py
specs/: 2026-06-13-desktop-auto-update-design.md  2026-06-13-desktop-auto-update-plan.md
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  media_cache.rs  media_server.rs  mobile_sync.rs  net_guard.rs  notifications.rs  notify.rs  search_index.rs  secrets.rs  updater.rs
src-tauri/src/config/: app_config.rs  mod.rs  quarkrc.rs  theme.rs
src-tauri/src/gif/: giphy.rs  klipy.rs  mod.rs  tenor.rs
src-tauri/src/matrix/: client.rs  crypto.rs  emoji.rs  html.rs  media.rs  mod.rs  reactions.rs  rooms.rs  spaces.rs  stickers.rs  threads.rs  timeline.rs
src/app/: actions.ts  animated_urls.ts  autocomplete_query.test.ts  autocomplete_query.ts  back.ts  compose_submit.test.ts  compose_submit.ts  keyboard.ts  markdown.test.ts  markdown.ts  mobile.ts  notification_routing.test.ts  notification_routing.ts  notifications.ts  panels.ts  pseudo_spaces.test.ts  pseudo_spaces.ts  session.ts  set_options.test.ts  set_options.ts  state.test.ts  state.ts  sync.ts  text_select.test.ts  text_select.ts  touch.ts  update_check.ts
src/app/actions/: commands.ts  context.test.ts  context.ts  crypto.ts  dialogs.ts  gif.ts  home.test.ts  home.ts  media.test.ts  media.ts  members.ts  messages.test.ts  messages.ts  profile.ts  reactions.ts  rooms.live-cache.test.ts  rooms.recency.test.ts  rooms.test.ts  rooms.ts  session.ts  status.ts  theme.ts  threads.ts
src/data/: unicode-emoji.ts
src/ipc/: app_config.ts  client.ts  config.ts  crypto.ts  emoji.ts  gif.ts  index.ts  invoke.ts  media.ts  mock.ts  notifications.ts  reactions.ts  room_settings.ts  rooms.ts  spaces.ts  threads.ts  timeline.ts  types.test.ts  types.ts  updater.test.ts  updater.ts
src/style/: base.css
src/theme/: builtins.ts  loader.test.ts  loader.ts  vars.css
src/ui/: App.ts  CommandBar.ts  ContextMenu.ts  DatePicker.ts  DebugViewer.ts  DevicePicker.ts  DialogBase.ts  EmojiPicker.ts  GifPicker.ts  HelpDialog.ts  HomeView.test.ts  HomeView.ts  ImageLightbox.ts  Input.test.ts  Input.ts  LoginScreen.test.ts  LoginScreen.ts  MemberList.test.ts  MemberList.ts  MentionPreview.ts  MobileTopBar.ts  ModalManager.ts  NotificationToast.ts  PickerBase.test.ts  PickerBase.ts  PinnedMessagesDialog.ts  ProfileDialog.ts  ProfileEditDialog.ts  QuickNavPalette.ts  QuickReactPicker.ts  Reactions.test.ts  Reactions.ts  ReplyPreview.ts  ResizeHandle.ts  RevisionHistoryDialog.ts  RoomDirectoryDialog.ts  RoomHeader.test.ts  RoomHeader.ts  RoomInfoDialog.ts  RoomList.test.ts  (+21 more)
src/vim/: commands.test.ts  commands.ts  compose_normal.test.ts  compose_normal.ts  keybindings.test.ts  keybindings.ts  mode.test.ts  mode.ts
themes/: amber.toml  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  high-contrast.toml  nord.toml  pesterchum.toml  phosphor.toml  solarized-dark.toml  solarized-light.toml
